--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "@yanach25/ajs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yanach25/ajs.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/yanach25/ajs/issues"
-  },
-  "homepage": "https://github.com/yanach25/ajs#readme"
+    "name": "@yanach25/ajs",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack --mode production"
+    },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/yanach25/ajs.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/yanach25/ajs/issues"
+    },
+    "homepage": "https://github.com/yanach25/ajs#readme",
+    "devDependencies": {
+        "@babel/cli": "^7.15.4",
+        "@babel/core": "^7.15.5",
+        "@babel/preset-env": "^7.15.6",
+        "babel-loader": "^8.2.2",
+        "webpack": "^5.52.1",
+        "webpack-cli": "^4.8.0"
+    }
 }
